- 'numeric-fields' and 'time-fields' can be defined in context definition with an array of field names. Calculation
  field of the SQLite view doesn't have a type and condition with numeric field have to numeric value.
- [BUG FIX] The lookup feature was not fully efficient, and refactored them.
- [BUG FIX] When checkbox set to off, the message which someone modified showed unexpectedly.

Ver.9 (January 31, 2022)
- [Important] Native upser authentication and LDAP direct supporting was dropped. If you want to LDAP server
  to authenticate user, the SAML is the replacement. SAML IdP can integrate with LDAP server as a identifying users.
  Dropped "php-bcmath" and "php-ldap" from the composer.json, and "jsencrypt" from package.json.
- [INFO] The /spec/Manual-Test directory is created on this repository. The SAML-Test.md file show the result of the
  manual test with SAML features.

- IMLibUI.revertOnValidationError can control to retrieve the original value or not, after validation error.
  The default value is true, and it means retrieve it.
- DB\Logger class accept the setWarningMessage() method, and it shows the message with the alert() on client.
  Also INTERMediatorLog.warningMessagePrevent can stop the alert box with setting to true, and the default is false.
- In case of Messaging errors, the Warning Messages are set instead of error messages.
- On the post only mode, if there is no data to send, the communication is going to prevent.
  If IMLibUI.postOnlyNoRecordPrevent set to false, it doesn't prevent in case of no data.
- [INFO] The progress displaying which shows a rounding gear can't operate any elements on the page. Previously it could.
  If you want to operate on the 'gear' display, you could define CSS as like: #_im_progress {pointer-events: none;}.
- Add dist-docs/container-for-trial directory and files for container.
- The variable $waitAfterMail in params.php sets the waiting milliseconds every after sending.