@@ -21,6 +21,8 @@ Ver.10 (In Development)
   field of the SQLite view doesn't have a type and condition with numeric field have to numeric value.
 - [BUG FIX] The lookup feature was not fully efficient, and refactored them.
 - [BUG FIX] When checkbox set to off, the message which someone modified showed unexpectedly.
+- [BUG FIX] After moving from list to detail and back to list page, paging position wasn't retrieve and show the
+  list from the start of it.
 
 Ver.9 (January 31, 2022)
 - [Important] Native upser authentication and LDAP direct supporting was dropped. If you want to LDAP server
